added a favicon to the website

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,6 +9,7 @@
       <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
 
+    <link rel="icon" href="https://cdn0.iconfinder.com/data/icons/ecology/500/sun_green-512.png" />
     <link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/style.css" />
     <link rel="alternate" type="application/rss+xml" title="{{ site.name }} - {{ site.description }}" href="{{ site.baseurl }}/feed.xml" />
 
